force-app/main/default/objects/Bedrock_Telemetry_Event__c/Bedrock_Telemetry_Event__c.object-meta.xml
<CustomObject>
    <description>A fault event from Bedrock Connect. In production this is a Data Cloud DLO fed by Kinesis.</description>
    <label>Bedrock Telemetry Event</label>
    <nameField>
    <displayFormat>BTE-{00000}</displayFormat>
    <label>Event Number</label>
    <type>AutoNumber</type>
</nameField>
    <pluralLabel>Bedrock Telemetry Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>