force-app/main/default/objects/Bedrock_Telemetry_Event__c/fields/Coolant_Temp_C__c.field-meta.xml
<CustomField>
    <fullName>Coolant_Temp_C__c</fullName>
    <label>Coolant Temp (C)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>