force-app/main/default/objects/Bedrock_Telemetry_Event__c/fields/Hydraulic_Pressure_PSI__c.field-meta.xml
<CustomField>
    <fullName>Hydraulic_Pressure_PSI__c</fullName>
    <label>Hydraulic Pressure (PSI)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>