force-app/main/default/objects/Bedrock_Telemetry_Event__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>