force-app/main/default/objects/Bedrock_Telemetry_Event__c/fields/Resolved_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Timestamp__c</fullName>
    <label>Resolved Timestamp</label>
    <type>DateTime</type>
</CustomField>