force-app/main/default/objects/Bedrock_Telemetry_Event__c/fields/RPM__c.field-meta.xml
<CustomField>
    <fullName>RPM__c</fullName>
    <label>RPM</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>