force-app/main/default/objects/Bedrock_Telemetry_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Id__c</columns>
    <columns>Asset__c</columns>
    <columns>Fault_Code__c</columns>
    <columns>Severity__c</columns>
    <columns>Event_Timestamp__c</columns>
    <columns>Resolution_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>